<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:textSize="45sp"
                android:textAlignment="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:paddingTop="10dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/create_list"/>
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/list_name"
                android:id="@+id/name"
                />
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/create_button"
                android:layout_marginTop="25dp"
                android:textSize="24sp"
                android:background="@color/colorPrimary"
                android:textColor="#ffffff"
                android:text="@string/create_button"
                />
        </LinearLayout>
    </ScrollView>
</FrameLayout>